--- a/src/style/homeSection2.css
+++ b/src/style/homeSection2.css
@@ -4,31 +4,56 @@
     min-height: 100%;
 }
 
-#home .img-bg{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
+#home .filter{
     width: 100%;
-    clip-path: inset(45% 45% 45% 45%);
-    will-change: clip-path;
-    transition: 0.5s;
-    z-index: 0;
-}
-
-#home .img-bg .D-desktop{
+    height: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%,-50%);
+    z-index: 2;
+    background-color: #0000002c;
+}
+
+#home .D-desktop{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    will-change: transform;
     z-index: 1;
+    box-shadow: -6px 4px 20px 20px rgba(0, 0, 0, 0.2);
 }
 
 #home .home-content{
     position: absolute;
-    top: 50%;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 900;
+    z-index: 3;
+}
+
+#home .home-content h1{
+    color: var(--text-heading);
+    font-size: 3rem;
+}
+
+#home .home-content p{
+    color: var(--text-paragraph);
+    font-size: 0.8rem;
+}
+
+#home .home-content a{
+    background-color: var(--button-bg);
+    padding: 0.5em 1em;
+    border-radius: 13px;
+    margin: 1em 0;
+    color: var(--button-text);
+    box-shadow: var(--shadow);
 }
