--- a/src/style/homeSection2.css
+++ b/src/style/homeSection2.css
@@ -4,17 +4,6 @@
     min-height: 100%;
 }
 
-#home .filter{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    z-index: 2;
-    background-color: #0000002c;
-}
-
 #home .D-desktop{
     position: absolute;
     top: 50%;
@@ -22,7 +11,7 @@
     transform: translate(-50%,-50%);
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: -2;
     box-shadow: -6px 4px 20px 20px rgba(0, 0, 0, 0.2);
 }
 
@@ -36,17 +25,19 @@
     flex-direction: column;
     align-items: center;
     font-weight: 900;
+    width: 100%;
     z-index: 3;
 }
 
 #home .home-content h1{
     color: var(--text-heading);
-    font-size: 3rem;
+    font-size: var(--main-text-size);
 }
 
 #home .home-content p{
     color: var(--text-paragraph);
-    font-size: 0.8rem;
+    font-size: clamp(0.4rem ,10vw, 0.8rem);
+    max-width: 60%;
 }
 
 #home .home-content a{
