--- a/src/style/main.css
+++ b/src/style/main.css
@@ -25,11 +25,30 @@
   --tertiary: #e16162;
 
   --shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.2);
+
+  --main-text-size: clamp(1.3rem,5vw,3rem);
+  --discrption-text-size: clamp(0.5rem ,30vw, 1rem);
 }
 
 a {
     text-decoration: none;
     color: var(--text-heading);
+}
+
+button{
+    border: none;
+    outline: none;
+}
+
+.filter{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: -1;
+    background-color: #00000070;
 }
 
 * {
