--- a/src/style/aboutUs3.css
+++ b/src/style/aboutUs3.css
@@ -17,7 +17,8 @@
     gap: 1em;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(5,175px);
+    grid-template-rows: repeat(5,20%);
+    
 }
 
 #about .img-walk{
