--- a/src/style/main.css
+++ b/src/style/main.css
@@ -30,13 +30,30 @@
     --card-main-color: #DEDEDE;
     --card-secondary-color: #DEDEDE;
 
-    --card-main-font-size: clamp(1rem , 4vw , 1.5rem);
-    --card-paragraph-font-size:clamp(0.3rem , 10vw , 0.7rem);
+    --card-main-font-size: clamp(1rem , 3vw , 1.5rem);
+    --card-paragraph-font-size:clamp(0.3rem , 3vw , 0.7rem);
+
+    /* whyUs cards desgin */
+    --main-font-color-whyUs:#DEDEDE;
+    --secendery-font-color-whyUs:#CFCFCF;
+    --stat-font-color-whyUs: #F9BC60;
+
+    --smail-card-course-Bg:linear-gradient(100deg ,#023F3C 5% ,#006B66);
+    --big-card-stats-Bg:linear-gradient(-70deg ,#023F3C 33% ,#006B66);
+
+    --smail-card-whyUs-Bg: linear-gradient(to top right , #023F3C 10%, #006B66);
+    --big-card-start-Bg:linear-gradient(-120deg , #023F3C , #006B66 80%);
+
+    /* qustions section */
+    --qustion-Bg:linear-gradient(-90deg , #006A65 , #00514D );
 
     --shadow: 6px 6px 6px 0px rgba(0, 0, 0, 0.2);
 
-    --main-text-size: clamp(1.3rem,5vw,3rem);
-    --discrption-text-size: clamp(0.5rem ,30vw, 1rem);
+    --h1-font-size:clamp(1.3rem ,5vw ,3rem);
+    --h2-font-size:clamp(0.9rem ,5vw ,1.5rem);
+    --h3-h4-font-size:clamp(0.6rem ,5vw ,1rem);
+    --p-font-size:clamp(0.6rem ,5vw,1rem);
+    --anthor-font-size:clamp(0.5rem ,5vw,0.7rem)
 }
 
 a {
@@ -82,4 +99,17 @@ body {
 #hero {
     width: 100%;
     height: 100%;
+}
+
+#whts-contect{
+    position: fixed;
+    width: 4em;
+    height: 4em;
+    border-radius: 50%;
+
+    background-color: red;
+
+    bottom: 4%;
+    left: 2%;
+    z-index: 10000;
 }
