--- a/src/style/aboutUs3.css
+++ b/src/style/aboutUs3.css
@@ -1,8 +1,6 @@
 #about{
     position: relative;
     display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
     width: 100%;
     height: 100%;
 }
@@ -55,8 +53,9 @@
 #about .about-content{
     margin: 15% 0 0 10%;
     grid-column: 1 / 4;
-    grid-row: 1 / 3 ;
+    grid-row: 1 / 4 ;
     display: flex;
+    padding: 15% 0 0 0;
     flex-direction: column;
     text-align: end;
     width: 100%;
@@ -76,13 +75,56 @@
 
 #about .about-content h2{
     font-weight: 900;
-    font-size: var(--main-text-size);
+    font-size: var(--h2-font-size);
     color: var(--main);
+    margin-bottom: 5%;
 }
 
 #about .about-content , .about-content-tow p{
-    font-size: var(--discrption-text-size);
+    font-size: var(--p-font-size);
     font-weight: 400;
+    line-height: 1.2rem;
     max-width: 600px;
     color: var(--secondary);
+}
+
+@media (max-width:840px) {
+    #about .img-walk{
+        margin-top: 20%;
+        grid-row: 1/4;
+        grid-column: 6/11;
+    }
+
+    #about .img-search{
+        grid-row: 3/6;
+        grid-column: 1/6;
+        padding: 13% 0;
+    }
+
+    #about .img-thinking{
+        display: none;
+    }
+
+    #about .about-content{
+        margin: 15% 0 0 10%;
+        grid-column: 1 / 5;
+        grid-row: 2 / 3 ;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        text-align: end;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    #about .about-content-tow{
+        grid-column: 6/11;
+        grid-row: 4/5;
+        margin: 20% 0;
+        text-align: end;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
 }
