--- a/src/style/courses4.css
+++ b/src/style/courses4.css
@@ -1,23 +1,19 @@
 #programs{
     position: relative;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     margin: 10px 0;
 }
 
 #programs .programs-head{
-    position: absolute;
     width: 100%;
-    top: 5%;
+    margin: 5% 0;
     text-align: center;
     color: var(--text-heading);
 }
 
 #programs .programs-cotent{
-    position: absolute;
-    top: 53%;
-    left: 50%;
-    transform: translate(-50% , -50%);
+    margin: 0 auto 0 auto;
     width: 80%;
     height: 80%;
     border-radius: 30px;
@@ -25,13 +21,13 @@
 
 #programs .card-container{
     display: grid;
-    grid-template-columns: repeat(auto-fill , minmax(360px,1fr));
-    grid-auto-rows: 50%;
+    grid-template-columns: repeat(auto-fill , minmax(min(100%,360px),1fr));
+    grid-auto-rows: 300px;
     gap: 1em;
     justify-items: center;
     width: 100%;
-    height: 88%;
-    margin: 2% 0 0 0;
+    height: 100%;
+    margin: 5% 0 0 0;
     border-radius: 0 0 30px 30px;
 }
 
@@ -53,7 +49,8 @@
 #programs .programs-content-head ul button{
     background-color: var(--button-bg);
     color: var(--button-text);
-    width: 100px;
+    width: var(--button-size);
+    font-size: var(--button-font-size);
     height: 35px;
     border-radius: 14px;
     font-weight: 900;
@@ -64,3 +61,6 @@
     background-color: var(--button-hover);
 }
 
+/* @media (max-width:) {
+    
+} */
