--- a/src/style/main.css
+++ b/src/style/main.css
@@ -51,9 +51,11 @@
 
     --h1-font-size:clamp(1.3rem ,5vw ,3rem);
     --h2-font-size:clamp(0.9rem ,5vw ,1.5rem);
-    --h3-h4-font-size:clamp(0.6rem ,5vw ,1rem);
-    --p-font-size:clamp(0.6rem ,5vw,1rem);
-    --anthor-font-size:clamp(0.5rem ,5vw,0.7rem)
+    --h3-h4-font-size:clamp(0.6rem ,3vw ,1.3rem);
+    --p-font-size: clamp(0.5rem ,3vw, 1rem);
+    --p2-font-size: clamp(0.5rem ,3vw, 0.9rem);
+    --button-font-size:clamp(0.6rem , 5vw , 0.8rem);
+    --button-size:clamp(1em ,15vw,7em);
 }
 
 a {
@@ -103,13 +105,13 @@ body {
 
 #whts-contect{
     position: fixed;
-    width: 4em;
-    height: 4em;
+    width: clamp(2.5em ,4vw,4em);
+    height: clamp(2.5em ,4vw,4em);
     border-radius: 50%;
 
     background-color: red;
 
-    bottom: 4%;
-    left: 2%;
+    bottom: 0.5em;
+    left: 0.5em;
     z-index: 10000;
 }
