--- a/src/style/whyUs3.css
+++ b/src/style/whyUs3.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 100%;
     min-height: 100%;
-    margin: 30% 0 10% 0;
+    margin: 10em 0 3em 0;
 }
 
 #whyUs .whyUs-content{
