--- a/src/style/header1.css
+++ b/src/style/header1.css
@@ -35,7 +35,7 @@
     #head{
         display: block;
         width: 45px;
-        height: 6.5%;
+        height: 2.5em;
         top: 1%;
         background-color: transparent;
         border-radius: 15px;
