--- a/src/style/header1.css
+++ b/src/style/header1.css
@@ -62,6 +62,10 @@
         right: 7px;
     }
 
+    .closeMenu img{
+        width: 70%;
+        height: 70%;
+    }
     #head .nav-links{
         display: block;
         flex-direction: column;
