--- a/src/style/main.css
+++ b/src/style/main.css
@@ -96,6 +96,7 @@ body {
     background-color: var(--bg-dark);
     width: 100%;
     height: 100vh;
+    opacity: 0;
 }
 
 #hero {
@@ -122,5 +123,25 @@ body {
 #whts-contect img{
     color: white;
     width: clamp(1.5em ,3vw,2em);
-    height: auto;
+    height: clamp(1.5em ,3vw,2em);
 }
+
+/* #lodaing{
+    position: fixed;
+    text-align: center;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    min-height: 100%;
+    transform: translate(-50% ,-50%);
+    background-color: #00514D;
+    z-index: 9999;
+}
+
+#lodaing.active{
+    display: none;
+}
+
+#lodaing h1{
+    font-size: 3rem;
+} */
