--- a/src/style/allStyle.css
+++ b/src/style/allStyle.css
@@ -211,6 +211,14 @@
     object-position: center;
 }
 
+#about video{
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    object-fit: cover;
+    object-position: center;
+}
+
 
 #about .about-content{
     margin: 15% 0 0 10%;
